objects/Qool__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Contains configuration for Qool integration</description>
    <fields>
        <fullName>Qool_Create_Customer_URL__c</fullName>
        <defaultValue>&quot;/QooLES/WebResources/qool_/SFDC/SFDCCustomerLandingPage.html&quot;</defaultValue>
        <description>The URL of Qool page for creating a new customer, relative to Qool_Server__c</description>
        <label>Qool Create Customer URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qool_Create_SPA_URL__c</fullName>
        <defaultValue>&quot;/QooLES/WebResources/qool_/SFDC/SFDCCustomerSPALandingPage.html&quot;</defaultValue>
        <description>The URL of Qool page for creating a new SPA, relative to Qool_Server__c</description>
        <label>Qool Create SPA URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qool_Dashboard_URL__c</fullName>
        <defaultValue>&quot;/QooLES/WebResources/qool_/SFDC/SFDCDashboard.html&quot;</defaultValue>
        <description>URL to qool dashboard</description>
        <label>Qool Dashboard URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qool_Server__c</fullName>
        <defaultValue>&quot;https://qool.abb.com&quot;</defaultValue>
        <description>Holds URL to Qool Server</description>
        <label>Qool Server</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>extSystemId__c</fullName>
        <defaultValue>&quot;9AAG10077&quot;</defaultValue>
        <description>The GAR ID to be used for Salesforce as external system in ABB</description>
        <label>extSystemId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Qool</label>
</CustomObject>